# podbridge

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
src/: main.rs
src/airpods/: aap.rs  mod.rs  models.rs
src/bluetooth/: linux.rs  mod.rs  scanner.rs  windows.rs
src/ui/: linux.rs  mod.rs  tray.rs  windows.rs
